# job-notifier

./: .coverage  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements_dev.txt
.github/actions/download-artifact/: Dockerfile  action.yaml  download.py
.github/workflows/: cicd.yaml  notify.yaml
scripts/: download_listings.py
src/: job.py  main.py  notifier.py  org.py  runner.py
src/job_notifier/: job.py  runner.py
src/job_notifier/parser/: parser.py
src/job_notifier/storage/: local.py  storage.py
src/notifier/: github.py  local.py  notifier.py
src/parser/: parser.py  stripe.py
src/parsers/: parser.py  stripe.py
src/scrapers/: scraper.py
src/storage/: local.py  storage.py
tests/: conftest.py  test_job.py  test_notifier.py  test_runner.py
tests/data/listings/: affirm.txt  airbnb.txt  airtable.txt  chanzuckerberginitiative.txt  cloudflare.txt  discord.txt  elastic.txt  figma.txt  lacework.txt  mongodb.txt  netflix.txt  nvidia.txt  pintrest.txt  ramp.txt  reddit.txt  slack.txt  square.txt  stitchfix.txt  stripe.txt  twilio.txt  upstart.txt  vectara.txt  zillow.txt  zscaler.txt
tests/data/pages/: airbnb.html  airtable.html  cloudflare.html  mongodb.html  pintrest.html  plaid.html  square.html  stripe.html  zscaler.html
tests/notifier/: test_github.py  test_local.py  test_notifier.py
tests/parser/: test_parser.py  test_stripe.py
tests/parsers/: test_stripe.py
tests/storage/: test_local.py  test_storage.py
